Fixes align for last column of table

--- a/src/assets/scss/components/table.scss
+++ b/src/assets/scss/components/table.scss
@@ -9,10 +9,6 @@
     font-weight: 400;
     border: none;
     background: none;
-
-    &:last-child {
-      text-align: right;
-    }
   }
 
   .p-datatable-tbody > tr {
